feat: add application mutation lookups
