# internal/transport/http/server.go
@@ -68,12 +68,14 @@ func NewServer(lc fx.Lifecycle, cfg config.Config, handler *Handler, authService
 	api.POST("/applications/get", handler.GetApplication)
 	api.POST("/applications/list", handler.ListApplications)
 	api.POST("/applications/menus/upsert", handler.UpsertMenu)
+	api.POST("/applications/menus/get", handler.GetMenu)
 	api.POST("/applications/menus/delete", handler.DeleteMenu)
 	api.POST("/applications/menus/draft/list", handler.ListMenuDraft)
 	api.POST("/applications/menus/publish", handler.PublishMenus)
 	api.POST("/applications/navigation/get", handler.GetNavigation)
 	api.POST("/applications/navigation/batch-get", handler.ListNavigations)
 	api.POST("/applications/tenant-grants/grant", handler.Grant)
+	api.POST("/applications/tenant-grants/get", handler.GetTenantApplicationGrant)
 	api.POST("/applications/tenant-grants/revoke", handler.Revoke)
 	api.POST("/applications/tenant-grants/list", handler.ListTenantApplications)
 	api.POST("/applications/tenant-grants/manage/list", handler.ListManagedTenantApplications)
